Allow spaced in CWD + bump vert.x
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>